--- a/src/i18n/zh-CN/flowListDrawer.json
+++ b/src/i18n/zh-CN/flowListDrawer.json
@@ -720,7 +720,8 @@
       "key6": "添加",
       "key7": "扣除",
       "key8": "操作",
-      "key9": "核销"
+      "key9": "核销",
+      "key10": "线上权益，不支持该操作"
     },
     "timesVerify": {
       "key0": "请输入核销次数",
