--- a/src/i18n/zh-CN/medicalRecord.json
+++ b/src/i18n/zh-CN/medicalRecord.json
@@ -500,12 +500,12 @@
     "name": "客户",
     "dossierId": "病历夹",
     "patientSignFlag": "患者签字",
-    "signFlag": "否",
-    "pigeonholeFlag": "否",
-    "sysUserId": "否",
-    "dateRange": "病历创建人",
-    "projectId": "病历创建时间",
-    "medicalRecordNumber": "病历项目",
+    "signFlag": "医生签字",
+    "pigeonholeFlag": "归档",
+    "sysUserId": "病历创建人",
+    "dateRange": "病历创建时间",
+    "projectId": "病历项目",
+    "medicalRecordNumber": "病历单号",
     "treatmentTime": "就诊时间",
     "doctorIdList": "医生",
     "departmentIdList": "科室",
