--- a/src/i18n/zh-CN/packageManagement.json
+++ b/src/i18n/zh-CN/packageManagement.json
@@ -473,6 +473,7 @@
     "key203": "确认同步",
     "key204": "已选同步门店",
     "key205": "选择门店同步基础数据",
-    "key206": "全选"
+    "key206": "全选",
+    "tips": "当前套餐中没有包含单个子项，不支持修改套餐价"
   }
 }
