--- a/src/i18n/zh-HK/dashboards.json
+++ b/src/i18n/zh-HK/dashboards.json
@@ -1752,7 +1752,7 @@
       "key1": "員工姓名",
       "key2": "客户姓名或電話",
       "key3": "初診人數/成交人數/成交率",
-      "key4": "初診人數/成交人數/成交率",
+      "key4": "複診人數/成交人數/成交率",
       "key5": "老客人數/成交人數/成交率",
       "key6": "客户",
       "key7": "諮詢日期",
