--- a/src/i18n/zh-HK/flowListDrawer.json
+++ b/src/i18n/zh-HK/flowListDrawer.json
@@ -720,7 +720,8 @@
       "key6": "添加",
       "key7": "扣除",
       "key8": "操作",
-      "key9": "核銷"
+      "key9": "核銷",
+      "key10": "線上權益，不支持該操作"
     },
     "timesVerify": {
       "key0": "請輸入核銷次數",
