--- a/src/i18n/zh-TW/medicalRecord.json
+++ b/src/i18n/zh-TW/medicalRecord.json
@@ -500,12 +500,12 @@
     "name": "客戶",
     "dossierId": "病歷夾",
     "patientSignFlag": "患者簽字",
-    "signFlag": "否",
-    "pigeonholeFlag": "否",
-    "sysUserId": "否",
-    "dateRange": "病歷建立人",
-    "projectId": "病歷建立時間",
-    "medicalRecordNumber": "病歷專案",
+    "signFlag": "醫生簽字",
+    "pigeonholeFlag": "歸檔",
+    "sysUserId": "病歷建立人",
+    "dateRange": "病歷建立時間",
+    "projectId": "病歷專案",
+    "medicalRecordNumber": "病歷單號",
     "treatmentTime": "就診時間",
     "doctorIdList": "醫生",
     "departmentIdList": "科室",
