--- a/src/i18n/zh-TW/packageManagement.json
+++ b/src/i18n/zh-TW/packageManagement.json
@@ -473,6 +473,7 @@
     "key203": "確認同步",
     "key204": "已選同步門店",
     "key205": "選擇門店同步基礎資料",
-    "key206": "全選"
+    "key206": "全選",
+    "tips": "當前套餐中沒有包含單個子項，不支援修改套餐價"
   }
 }
