--- a/src/i18n/zh-CN/dashboards.json
+++ b/src/i18n/zh-CN/dashboards.json
@@ -1752,7 +1752,7 @@
       "key1": "员工姓名",
       "key2": "客户姓名或电话",
       "key3": "初诊人数/成交人数/成交率",
-      "key4": "初诊人数/成交人数/成交率",
+      "key4": "复诊人数/成交人数/成交率",
       "key5": "老客人数/成交人数/成交率",
       "key6": "客户",
       "key7": "咨询日期",
