--- a/src/i18n/zh-CN/memberInterests.json
+++ b/src/i18n/zh-CN/memberInterests.json
@@ -299,5 +299,7 @@
   "key338": "同步到下级",
   "tips6": "当前不可能进行同步到下级操作，请先进行【会员权益-权益配置】同步到下级！",
   "tips7": "会员卡标记(建议尺寸96px*120px)",
-  "key339": "信息配置"
+  "key339": "信息配置",
+  "tips8": "保存成功，请及时同步到下级",
+  "tips9": "添加成功，请及时同步到下级"
 }
