--- a/src/i18n/zh-TW/memberInterests.json
+++ b/src/i18n/zh-TW/memberInterests.json
@@ -299,5 +299,7 @@
   "key338": "同步到下級",
   "tips6": "當前不可能進行同步到下級操作，請先進行【會員權益-權益配置】同步到下級！",
   "tips7": "會員卡標記(建議尺寸96px*120px)",
-  "key339": "資訊配置"
+  "key339": "資訊配置",
+  "tips8": "儲存成功，請及時同步到下級",
+  "tips9": "新增成功，請及時同步到下級"
 }
